ECOSCOM-5697 - Add ability to create artifacts within workspace